Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -50,7 +50,7 @@ body {
 }
 .description {
     text-align: left;
-    line-height: 1.2;
+    line-height: 1.5;
     margin-left: 200px;
     margin-top: 70px; 
 }
@@ -113,7 +113,10 @@ footer {
 .copyright {
     justify-content: space-between;
     display: flex;
-    margin-left: 250px;
+    margin-left: 500px;
+}
+#premium, #shipping, #assurance {
+    line-height: ; 
 }
 </style>
 <head>
@@ -130,18 +133,24 @@ footer {
             <input type="text" placeholder="Enter your email address" required>
                     <input name="form" type="submit" value="GET STARTED"> 
                 </div>
-    <section class="description">
+<section class="description">
+    <div id="premium">
         <h1>Premium Materials</h1>
-            <p1>Our trombones use th shiniest brass which is sourced
+            <p1>Our trombones use the shiniest brass which is sourced
             locally. This will increase the longevity of your purchase</p1>
+    </div>
+    <div id="shipping">      
         <h2>Fast Shipping</h2>
             <p2>We make sure you receive your trombone as soon as we have
             finished making it. We also provide free returns if you are 
             not satisfied.</p2>
-        <h3>Quality Assurance</h3>
+    </div>
+        <div id="assurance">
+            <h3>Quality Assurance</h3>
             <p3>for every purchase you make, we will ensure there are no damages
             or faults and we will check and test the pitch of your instrument</p3>
-    </section>
+        </div>
+        </section>
 <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" 
     title="YouTube video player" frameborder="0" 
