Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -51,15 +51,16 @@ body {
 .description {
     text-align: left;
     line-height: 1.5;
-    margin-left: 200px;
+    margin-left: 300px;
     margin-top: 70px; 
+    font-size: large;
 }
 h1,h2,h3 {
     font-size: 20px;
     font-weight: 500;
 }
 iframe {
-    margin-left: 200px;
+    margin-left: 400px;
     display: block;
     align-items: center;
     justify-content: center;
@@ -116,14 +117,17 @@ footer {
     margin-left: 500px;
 }
 #premium, #shipping, #assurance {
-    line-height: ; 
+    margin-block: 4rem;
+}
+.features, .how, .pricing {
+    margin-left: 70px;
 }
 </style>
 <head>
     <nav class="navbar">
         <div class="logo">Original trombones</div>
         <div class="features">Features</div>
-        <div class="how it works">How it works</div>
+        <div class="how">How it works</div>
         <div class="pricing">Pricing</div>
     </nav>
 </head>
