--- a/Product landing page.html
+++ b/Product landing page.html
@@ -20,6 +20,11 @@ body {
     padding: 20px;
     background-color: teal;
     color: #fff; 
+    width: 99%;
+    height: 50px;
+    margin-left: -8px;
+    margin-top: -8px;
+    overflow: hidden;
 }
 .logo {
     font-size: 28px;
@@ -33,6 +38,7 @@ body {
     display: block;
     align-items: center;
     justify-content: center;
+    min-width: 100%;
 }
 [type="text"] {
     min-width: 50%;
@@ -42,11 +48,12 @@ body {
 [name="form"] {
     background-color: rgb(233, 194, 22);
     font-weight: 700;
-    min-width: 20%; 
+    width: 20%; 
     line-height: 1.3rem;
     border: none;
     display: block;
     margin-left: 540px;
+        
 }
 .description {
     text-align: left;
@@ -121,6 +128,7 @@ footer {
 }
 .features, .how, .pricing {
     margin-left: 70px;
+    font-size: 20px;
 }
 </style>
 <head>
@@ -139,20 +147,20 @@ footer {
                 </div>
 <section class="description">
     <div id="premium">
-        <h1>Premium Materials</h1>
+        <h1><strong>Premium Materials</strong></h1>
             <p1>Our trombones use the shiniest brass which is sourced
-            locally. This will increase the longevity of your purchase</p1>
+            locally. This will increase the longevity of your purchase.</p1>
     </div>
     <div id="shipping">      
-        <h2>Fast Shipping</h2>
+        <h2><strong>Fast Shipping</strong></h2>
             <p2>We make sure you receive your trombone as soon as we have
             finished making it. We also provide free returns if you are 
             not satisfied.</p2>
     </div>
         <div id="assurance">
-            <h3>Quality Assurance</h3>
+            <h3><strong>Quality Assurance</strong></h3>
             <p3>for every purchase you make, we will ensure there are no damages
-            or faults and we will check and test the pitch of your instrument</p3>
+            or faults and we will check and test the pitch of your instrument.</p3>
         </div>
         </section>
 <div>
