--- a/Product landing page.html
+++ b/Product landing page.html
@@ -10,6 +10,10 @@
 <title>Product landing page</title>
 </head>
 <style>
+html {
+    min-width: 100%;
+    min-height: 200px;
+}
 body {
     background-color:gainsboro;
 }
@@ -28,12 +32,13 @@ body {
 }
 .logo {
     font-size: 28px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .heading {
     text-align: center;
     margin-top: 120px;
     line-height: 2.5;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 500;
     display: block;
     align-items: center;
@@ -117,6 +122,9 @@ footer {
     margin-top: 40px;
     background-color: rgb(199, 191, 191);
     width: 70%;
+    margin-bottom: -10px;
+
+    
     }
 .copyright {
     justify-content: space-between;
@@ -141,7 +149,7 @@ footer {
 </head>
 <body>
     <div class="heading">
-        <header>Handcrafted, home-made masterpieces</header>
+        <header><strong>Handcrafted, home-made masterpieces</strong></header>
             <input type="text" placeholder="Enter your email address" required>
                     <input name="form" type="submit" value="GET STARTED"> 
                 </div>
