Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -11,8 +11,7 @@
 </head>
 <style>
 html {
-    min-width: 100%;
-    min-height: 200px;
+    width: 100%;
 }
 body {
     background-color:gainsboro;
@@ -31,8 +30,12 @@ body {
     overflow: hidden;
 }
 .logo {
-    font-size: 28px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    width: 33%;
+    height: 100%;
+    margin-right:;
+    display: flex;
+    justify-content: space-around;
+     
 }
 .heading {
     text-align: center;
@@ -134,19 +137,19 @@ footer {
 #premium, #shipping, #assurance {
     margin-block: 4rem;
 }
-.features, .how, .pricing {
+.features, .how-it-works, .pricing {
     margin-left: 70px;
     font-size: 20px;
 }
 </style>
-<head>
+<header>
     <nav class="navbar">
-        <div class="logo">Original trombones</div>
+        <div class="logo"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="original trombones logo"></div>
         <div class="features">Features</div>
-        <div class="how">How it works</div>
+        <div class="how-it-works">How it works</div>
         <div class="pricing">Pricing</div>
     </nav>
-</head>
+</header>
 <body>
     <div class="heading">
         <header><strong>Handcrafted, home-made masterpieces</strong></header>
