--- a/Product landing page.html
+++ b/Product landing page.html
@@ -11,7 +11,7 @@
 </head>
 <style>
 html {
-    width: 100%;
+    max-width: 100%;
 }
 body {
     background-color:gainsboro;
@@ -117,8 +117,9 @@ iframe {
 }
 #instrument {
     background-color: rgb(199, 191, 191);
-    padding: 1.5rem;
+    padding: 1.5rem;     
 }
+
 footer {
     text-align: right;
     margin-left: 200px;
@@ -140,6 +141,15 @@ footer {
 .features, .how-it-works, .pricing {
     margin-left: 70px;
     font-size: 20px;
+}
+.features:hover, .how-it-works:hover, .pricing:hover {
+    background-color: rgb(12, 94, 94);    
+    padding: 2rem;
+    display: block;
+    overflow: hidden;
+    max-width: 100%;
+    max-height: 100%;
+
 }
 </style>
 <header>
