Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -155,16 +155,18 @@ footer {
 <header>
     <nav class="navbar">
         <div class="logo"><img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="original trombones logo"></div>
-        <div class="features">Features</div>
-        <div class="how-it-works">How it works</div>
-        <div class="pricing">Pricing</div>
+        <div class="features"><a href="#featured" id="nav-link"></a>Features</div>
+        <div class="how-it-works"><a href="#video" id="nav-link"></a>How it works</div>
+        <div class="pricing"><a href="#prices" id="nav-link"></a>Pricing</div>
     </nav>
 </header>
 <body>
     <div class="heading">
         <header><strong>Handcrafted, home-made masterpieces</strong></header>
-            <input type="text" placeholder="Enter your email address" required>
+            <form action="https://www.freecodecamp.com/email-submit">   
+                    <input type="text" placeholder="Enter your email address" required>
                     <input name="form" type="submit" value="GET STARTED"> 
+            </form>
                 </div>
 <section class="description">
     <div id="premium">
