--- a/Product landing page.html
+++ b/Product landing page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Date started: August 23rd-->
-<!--Date completed: September 2nd-->
+<!--Date completed: Sseptember 2nd-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
