Product landing page.html

--- a/Product landing page.html
+++ b/Product landing page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Date started: August 23rd-->
-<!--Date completed: Sseptember 2nd-->
+<!--Date completed: September 2nd-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,6 @@ body {
 .logo {
     width: 33%;
     height: 100%;
-    margin-right:;
     display: flex;
     justify-content: space-around;
      
