--- a/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
+++ b/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
@@ -6,8 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technical Documentation Page</title>
     <link rel="stylesheet" href="style.css">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
+    <section>
+        <div class="col-3 overflow-auto" id="navbar">
+            <header>JS Documentation</header>
+                <nav>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                        <a class="nav-link" href="#">What you should already know</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#">JavaScript and Java</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Hello world</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Variables</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Declaring variables</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Variable scope</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Global variables                   </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Constants</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Data types</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">if...else statement</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">while statement</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Function declarations</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="reference" href="#">Reference</a>
+                        </li>
+                    </ul>
+                </nav>
+        </div>
     
+    </section>
+
+
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
