--- a/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
+++ b/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
@@ -10,13 +10,12 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-    <section>
-        <div class="col-3 overflow-auto" id="navbar">
+    <nav>
+        <div class="col-3" id="navbar">
             <header>JS Documentation</header>
-                <nav>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                        <a class="nav-link" href="#">What you should already know</a>
+                        <a class="nav-link" href="#" id="">What you should already know</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="#">JavaScript and Java</a>
@@ -55,10 +54,9 @@
                             <a class="nav-link" id="reference" href="#">Reference</a>
                         </li>
                     </ul>
-                </nav>
-        </div>
-    
-    </section>
+                </div>
+            </nav>
+
 
 
     <!-- JavaScript Bundle with Popper -->
