--- a/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
+++ b/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="col-3" id="navbar">
             <header>JS Documentation</header>
-                    <ul class="nav flex-column">
+                    <ul class="nav flex-column" id="navbar-border">
                         <li class="nav-item">
                         <a class="nav-link" href="#" id="">What you should already know</a>
                         </li>
@@ -42,10 +42,10 @@
                             <a class="nav-link" href="#">Data types</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">if...else statement</a>
+                            <a class="nav-link" href="#">If...else statement</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">while statement</a>
+                            <a class="nav-link" href="#">While statement</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Function declarations</a>
@@ -56,7 +56,23 @@
                     </ul>
                 </div>
             </nav>
-
+<main>
+    <section class="introduction">
+        <article>
+            <h1>Introduction</h1>
+            <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
+            <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects; for example:</p>
+            <ul>
+                <li>
+                    Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user events such as mouse clicks, form input, and page navigation.
+                </li>
+                <li>
+                    Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.
+                </li>
+            </ul>
+        </article>
+    </section>
+</main>
 
 
     <!-- JavaScript Bundle with Popper -->
