--- a/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
+++ b/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
@@ -57,9 +57,9 @@
                 </div>
             </nav>
 <main>
-    <section class="introduction">
-        <article>
-            <h1>Introduction</h1>
+    <section>
+        <article class="introduction">
+            <h1 class="subtitle">Introduction</h1>
             <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
             <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects; for example:</p>
             <ul>
@@ -68,6 +68,24 @@
                 </li>
                 <li>
                     Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server.
+                </li>
+            </ul>
+        </article>
+        <br>
+        <article class="what-know">
+            <h1 class="subtitle">What you should already know</h1>
+            <p>This guide assumes you have the following basic background:</p>
+            <ul id="what-know-list">
+                <li>
+                    A general understanding of the Internet and the World Wide Web (WWW).
+                </li>
+                <li>
+                    Good working knowledge of HyperText Markup Language (HTML).
+
+                </li>
+                <li>
+                    Some programming experience. If you are new to programming, try one of the tutorials linked on the main page about JavaScript.
+
                 </li>
             </ul>
         </article>
