title page position fixed when scrolling

--- a/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
+++ b/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
@@ -10,10 +10,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
+    <!-- nav section -->
     <nav>
         <div class="col-3" id="navbar">
-            <header>JS Documentation</header>
                     <ul class="nav flex-column" id="navbar-border">
+                        <header>JS Documentation</header>
                         <li class="nav-item">
                         <a class="nav-link" href="#" id="">What you should already know</a>
                         </li>
@@ -72,7 +73,7 @@
             </ul>
         </article>
         <br>
-        <article class="what-know">
+        <article class="section">
             <h1 class="subtitle">What you should already know</h1>
             <p>This guide assumes you have the following basic background:</p>
             <ul id="what-know-list">
@@ -89,6 +90,20 @@
                 </li>
             </ul>
         </article>
+        <article class="section">
+            <h1 class="subtitle">JavaScript and Java</h1>
+                <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
+                <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime system based on a small number of data types representing numeric, Boolean, and string values. JavaScript has a prototype-based object model instead of the more common class-based object model. The prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual objects. JavaScript also supports functions without any special declarative requirements. Functions can be properties of objects, executing as loosely typed methods.</p>
+                <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
+        </article>
+        <br>
+        <article class="section">
+            <h1 class="subtitle">JavaScript and Java</h1>
+                <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
+                <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime system based on a small number of data types representing numeric, Boolean, and string values. JavaScript has a prototype-based object model instead of the more common class-based object model. The prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual objects. JavaScript also supports functions without any special declarative requirements. Functions can be properties of objects, executing as loosely typed methods.</p>
+                <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
+        </article>
+        <br>
     </section>
 </main>
 
