--- a/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
+++ b/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
@@ -102,10 +102,25 @@
         <article class="section">
             <h1 class="subtitle">Hello world</h1>
                 <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code:</p>
-                
+                <code>
+                    function greetMe(yourName) { alert("Hello " + yourName); } <br>
+greetMe("World");
+                </code>
                 <p>Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!</p>
         </article>
         <br>
+        <article class="section">
+            <h1 class="subtitle">Variables</h1>
+                <p>You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.
+
+                </p>
+                <p>A JavaScript identifier must start with a letter, underscore (_), or dollar sign ($); subsequent characters can also be digits (0-9). Because JavaScript is case sensitive, letters include the characters "A" through "Z" (uppercase) and the characters "a" through "z" (lowercase).
+
+                </p>
+                <p>You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.
+
+                </p>
+        </article>
     </section>
 </main>
 
