--- a/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
+++ b/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
@@ -205,9 +205,23 @@ WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g; <br>
         <article class="section">
             <h1 class="subtitle">Data types</h1>
                 <p>The latest ECMAScript standard defines seven data types:
-
                 </p>
-                
+                    <ul>
+                        <li>Six data types that are primitives:
+
+                        </li>
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        <li>and Object
+                        </li>
+                    </ul>
+                    <p>Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform.</p>
         </article>
         <br>
         <article class="section">
