insert href id tags in nav list for users to click and go to

--- a/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
+++ b/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
@@ -16,22 +16,22 @@
                     <ul class="nav flex-column" id="navbar-border">
                         <header>JS Documentation</header>
                         <li class="nav-item">
-                        <a class="nav-link" href="#" id="">What you should already know</a>
+                        <a class="nav-link" href="#What-you-should-already-know">What you should already know</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">JavaScript and Java</a>
+                        <a class="nav-link" href="#JavaScript-and-Java">JavaScript and Java</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Hello world</a>
+                            <a class="nav-link" href="#Hello-World">Hello world</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Variables</a>
+                            <a class="nav-link" href="#Variables">Variables</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Declaring variables</a>
+                            <a class="nav-link" href="#Declaring-variables">Declaring variables</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Variable scope</a>
+                            <a class="nav-link" href="#Variable-scope">Variable scope</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Global variables                   </a>
@@ -76,7 +76,7 @@
         </article>
         <br>
         <article class="section">
-            <h1 class="subtitle">What you should already know</h1>
+            <h1 class="subtitle" id="What-you-should-already-know">What you should already know</h1>
             <p>This guide assumes you have the following basic background:</p>
             <ul id="what-know-list">
                 <li>
