--- a/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
+++ b/responsive-web-design-projects/technical-documentation-page/technical-documentation-page.html
@@ -9,14 +9,14 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
-<body>
+<body class="dark-mode">
     <!-- nav section -->
     <nav>
-        <div class="col-3" id="navbar">
+        <div class="col-3 overflow-auto bg-black" id="navbar">
                     <ul class="nav flex-column" id="navbar-border">
                         <header>JS Documentation</header>
                         <li class="nav-item">
-                        <a class="nav-link" href="#What-you-should-already-know">What you should already know</a>
+                        <a class="nav-link " href="#What-you-should-already-know">What you should already know</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="#JavaScript-and-Java">JavaScript and Java</a>
@@ -57,10 +57,11 @@
                     </ul>
                 </div>
             </nav>
+<!-- info section -->
+<label  id="dark-change"></label>
 <main>
     <section>
         <article class="section">
-            <br>
             <br>
             <h1 class="subtitle">Introduction</h1>
             <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
@@ -330,15 +331,13 @@ WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g; <br>
         <article class="section">
             <h1 class="subtitle" id="References">Reference</h1>
                 <ul>
-                    <li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide">MDN</a></li>
+                    <li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide"><strong>MDN</strong></a></li>
                 </ul>
         </article>
         <br>
         
     </section>
 </main>
-
-
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
