completed navbar + insert introductory section

--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -33,7 +33,14 @@
           </div>
         </div>
       </nav>
-
+      <!-- INTRODUCTION -->
+<section id="introduction">
+<div class="">
+    <h1>Hello my name is Arthur!</h1>
+    <p>An aspiring software engineer</p>
+</div>
+<img src="" alt="">
+</section>
 
 
 
