--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,11 +35,12 @@
       </nav>
       <!-- INTRODUCTION -->
 <section id="introduction">
-<div class="">
+<div>
     <h1>Hello my name is Arthur!</h1>
     <p>An aspiring software engineer</p>
+    <img src="profile-pic.png" alt="profile picture">
 </div>
-<img src="" alt="">
+
 </section>
 
 
