--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -36,11 +36,27 @@
       <!-- INTRODUCTION -->
 <section id="introduction">
 <div>
-    <h1>Hello my name is Arthur!</h1>
-    <p>An aspiring software engineer</p>
-    <img src="profile-pic.png" alt="profile picture">
+    <h1 style="font-size: 60px">Hello my name is Arthur!</h1>
+    <p class="text-center fst-italic">An aspiring software engineer</p>
 </div>
-
+</section>
+<!-- PROJECTS LIST -->
+<section id="projects">
+<div class="text-center">
+  <h1>These are some of my projects</h1>
+</div>
+<div class="text-center">
+  <div class="container">
+    <div class="row row-cols-3">
+      <div class="col">Column</div>
+      <div class="col">Column</div>
+      <div class="col">Column</div>
+      <div class="col">Column</div>
+      <div class="col">Column</div>
+      <div class="col">Column</div>
+    </div>
+  </div>
+</div>
 </section>
 
 
