--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -36,24 +36,22 @@
       <!-- INTRODUCTION -->
 <section id="introduction">
 <div>
-    <h1 style="font-size: 60px">Hello my name is Arthur!</h1>
-    <p class="text-center fst-italic">An aspiring software engineer</p>
+    <h1 style="font-size: 50px">Hello my name is Arthur!</h1>
+    <p class="text-center fst-italic" id="aspiring">An aspiring software engineer</p>
 </div>
 </section>
 <!-- PROJECTS LIST -->
 <section id="projects">
-<div class="text-center">
-  <h1>These are some of my projects</h1>
-</div>
+  <h1 class="text-center">These are some of my projects</h1>
 <div class="text-center">
   <div class="container">
     <div class="row row-cols-3">
-      <div class="col">Column</div>
-      <div class="col">Column</div>
-      <div class="col">Column</div>
-      <div class="col">Column</div>
-      <div class="col">Column</div>
-      <div class="col">Column</div>
+      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 1</p></a></div>
+      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 2</p></a></div>
+      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 3</p></a></div>
+      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 4</p></a></div>
+      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 5</p></a></div>
+      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 6</p></a></div>
     </div>
   </div>
 </div>
