project heading fix

--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -46,12 +46,12 @@
 <div class="text-center">
   <div class="container">
     <div class="row row-cols-3">
-      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 1</p></a></div>
-      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 2</p></a></div>
-      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 3</p></a></div>
-      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 4</p></a></div>
-      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 5</p></a></div>
-      <div class="col"><a href=""><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 6</p></a></div>
+      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 1</p></a></div>
+      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 2</p></a></div>
+      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 3</p></a></div>
+      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 4</p></a></div>
+      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 5</p></a></div>
+      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 6</p></a></div>
     </div>
   </div>
 </div>
