--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -43,7 +43,7 @@
 <!-- PROJECTS LIST -->
 <section id="projects">
   <h1 class="text-center">These are some of my projects</h1>
-<div class="text-center">
+<div class="text-center" style="margin-top: 80px;">
   <div class="container">
     <div class="row row-cols-3">
       <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 1</p></a></div>
@@ -56,7 +56,18 @@
   </div>
 </div>
 </section>
-
+<!-- CONTACT -->
+<section id="contact">
+  <div class="text-center">
+  <h1 style="font-size: 50px;">Let's keep in touch!</h1>
+  <p>How do you take your coffee?</p>
+</div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-md">GitHub</div>
+    <div class="col-md">LinkedIn</div>
+  </div>
+</section>
 
 
 
