--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- NAVBAR -->
@@ -35,7 +36,7 @@
       </nav>
       <!-- INTRODUCTION -->
 <section id="introduction">
-<div>
+<div class="text-center">
     <h1 style="font-size: 50px">Hello my name is Arthur!</h1>
     <p class="text-center fst-italic" id="aspiring">An aspiring software engineer</p>
 </div>
@@ -60,14 +61,25 @@
 <section id="contact">
   <div class="text-center">
   <h1 style="font-size: 50px;">Let's keep in touch!</h1>
-  <p>How do you take your coffee?</p>
+  <p class="fst-italic" style="font-weight: 200; color:rgb(228, 228, 228)">How do you take your coffee?</p>
 </div>
+<br>
+<br>
+<br>
 <div class="container text-center">
-  <div class="row">
-    <div class="col-md">GitHub</div>
-    <div class="col-md">LinkedIn</div>
+  <div class="row justify-content-center">
+    <div class="col-md-1"><i class="fa fa-github fa-3x"></i></div>
+    <div class="col-md-1"><i class="fa fa-linkedin fa-3x"></i></div>
   </div>
 </section>
+<!-- FOOTER -->
+<footer>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        Copyright © 2022 Arthur Thai. All rights reserved.  
+      </div>
+</footer>
 
 
 
