insert tasks as comments to polish portfolio

--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -35,15 +35,23 @@
         </div>
       </nav>
       <!-- INTRODUCTION -->
+      <!-- 
+        1. Create an appealing background
+       -->
 <section id="introduction">
 <div class="text-center">
-    <h1 style="font-size: 50px">Hello my name is Arthur!</h1>
+    <h1 id="heading">Hello my name is Arthur!</h1>
     <p class="text-center fst-italic" id="aspiring">An aspiring software engineer</p>
 </div>
 </section>
 <!-- PROJECTS LIST -->
+<!-- 
+  1. Make project image boxes with heading below to fit to all devices
+  2. Simulate headings similar to FCC template
+
+-->
 <section id="projects">
-  <h1 class="text-center">These are some of my projects</h1>
+  <h1 class="text-center portfolio" >Portfolio</h1>
 <div class="text-center" style="margin-top: 80px;">
   <div class="container">
     <div class="row row-cols-3">
@@ -68,6 +76,9 @@
 <br>
 <div class="container text-center">
   <div class="row justify-content-center">
+    <!-- 
+      1. Make images accessible to designated websites
+     -->
     <div class="col-md-1"><i class="fa fa-github fa-3x"></i></div>
     <div class="col-md-1"><i class="fa fa-linkedin fa-3x"></i></div>
   </div>
