more tasks commented to be due

--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -37,6 +37,7 @@
       <!-- INTRODUCTION -->
       <!-- 
         1. Create an appealing background
+        2. Create about me section (separate webpage)
        -->
 <section id="introduction">
 <div class="text-center">
@@ -78,6 +79,7 @@
   <div class="row justify-content-center">
     <!-- 
       1. Make images accessible to designated websites
+      2. Make logo interactive
      -->
     <div class="col-md-1"><i class="fa fa-github fa-3x"></i></div>
     <div class="col-md-1"><i class="fa fa-linkedin fa-3x"></i></div>
