add a tag to logo in contact section

--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -25,7 +25,7 @@
                 <a class="nav-link active" id="nav-title" aria-current="page" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" id="nav-title" aria-current="page" href="#">Work</a>
+                <a class="nav-link active" id="nav-title" aria-current="page" href="#">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" id="nav-title" aria-current="page" href="#">Contact</a>
@@ -58,7 +58,7 @@
               <div class="card">
                   <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">YouTube Clone</h4>
+                      <h4 class="card-title">Promodorro</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="text-center">
                           <a href="#" class="btn btn-success">Link</a>
@@ -71,7 +71,7 @@
               <div class="card portfolioContent">
                   <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Quiz App</h4>
+                      <h4 class="card-title">To do list</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="text-center">
                           <a href="#" class="btn btn-success">Link</a>
@@ -84,7 +84,7 @@
               <div class="card portfolioContent">
                   <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Product Landing Page</h4>
+                      <h4 class="card-title">Financial helper</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="text-center">
                           <a href="#" class="btn btn-success">Link</a>
@@ -99,7 +99,7 @@
               <div class="card portfolioContent">
                   <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Messaging Service</h4>
+                      <h4 class="card-title">Calculator</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="text-center">
                           <a href="#" class="btn btn-success">Link</a>
@@ -112,7 +112,7 @@
               <div class="card portfolioContent">
                   <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Twitter Clone</h4>
+                      <h4 class="card-title">Clone of FAANG website</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="text-center">
                           <a href="#" class="btn btn-success">Link</a>
@@ -125,7 +125,7 @@
               <div class="card portfolioContent">
                   <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Blog App</h4>
+                      <h4 class="card-title">Snake game</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="text-center">
                           <a href="#" class="btn btn-success">Link</a>
@@ -150,8 +150,16 @@
       1. Make images accessible to designated websites
       2. Make logo interactive
      -->
-    <div class="col-md-1"><i class="fa fa-github fa-3x"></i></div>
-    <div class="col-md-1"><i class="fa fa-linkedin fa-3x"></i></div>
+    <div class="col-md-1">
+      <a href="https://github.com/Arthur7436">
+        <i class="fa fa-github fa-3x"></i>
+      </a>
+      </div>
+    <div class="col-md-1">
+      <a href="https://www.linkedin.com/in/arthurthai479/">
+        <i class="fa fa-linkedin fa-3x"></i>
+      </a>
+    </div>
   </div>
 </section>
 <!-- FOOTER -->
