--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -34,23 +34,19 @@
           </div>
         </div>
       </nav>
-<!-- enable hidden navbar -->
-      <!-- INTRODUCTION -->
-      <!-- 
-        1. Create an appealing background
-        2. Create about me section (separate webpage)
-       -->
 <section id="background">
 <div class="text-center introduction">
     <h1 id="heading">Hello my name is Arthur!</h1>
     <p class="text-center fst-italic" id="aspiring">An aspiring software engineer</p>
 </div>
 </section>
+<!-- ABOUT SECTION -->
+<section id="about">
+  
+
+
+</section>
 <!-- PORTFOLIO -->
-<!-- 
-  1. Make project image boxes with heading below to fit to all devices
-  2. Simulate headings similar to FCC template
--->
 <section id="portfolio">
   <div class="container ">
       <h1 class="text-center portfolio-heading">Portfolio</h1>
