--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -41,7 +41,8 @@
 </div>
 </section>
 <!-- ABOUT SECTION -->
-<section id="about">
+
+<!-- TIMELINE  -->
   <section id="cd-timeline" class="cd-container">
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
@@ -126,8 +127,6 @@
 		</div> <!-- cd-timeline-block -->
 	</section> <!-- cd-timeline -->
 
-
-</section>
 <!-- PORTFOLIO -->
 <section id="portfolio">
   <div class="container ">
