insert gmail logo and link in contact section

--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -238,6 +238,11 @@
         <i class="fa fa-linkedin fa-3x"></i>
       </a>
     </div>
+    <div class="col-md-1">
+      <a href="arthur.thai479@gmail.com">
+        <i class="fa fa-envelope fa-3x"></i>
+      </a>
+    </div>
   </div>
 </section>
 <!-- FOOTER -->
