timeline heading inserted and centered

--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -43,8 +43,12 @@
 <!-- ABOUT SECTION -->
 
 <!-- TIMELINE  -->
+<section>
+ <div id="timeline-heading">
+  <h1 class="portfolio-heading text-center">My timeline journey</h1>
+ </div>
   <section id="cd-timeline" class="cd-container">
-		<div class="cd-timeline-block">
+    <div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 			</div>
 
@@ -126,7 +130,7 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 	</section> <!-- cd-timeline -->
-
+</section>
 <!-- PORTFOLIO -->
 <section id="portfolio">
   <div class="container ">
@@ -239,7 +243,7 @@
       </a>
     </div>
     <div class="col-md-1">
-      <a href="arthur.thai479@gmail.com">
+      <a href="mailto:arthur.thai479@gmail.com">
         <i class="fa fa-envelope fa-3x"></i>
       </a>
     </div>
