add contents to timeline

--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -53,24 +53,18 @@
 			</div>
 
 			<div class="cd-timeline-content">
-				<h2>Penta Consulting</h2>
+				<h2>Started learning how to code</h2>
         <div class="timeline-content-info">
-          <span class="timeline-content-info-title">
-            <i class="fa fa-certificate" aria-hidden="true"></i>
-            Front End Developer
-          </span>
-          <span class="timeline-content-info-date">
-            <i class="fa fa-calendar-o" aria-hidden="true"></i>
-            June 2016 - Present
-          </span>
         </div>
-				<p>Working alongside the designer team implementing the designs, also developing custom solutions to address team necessities.</p>
+				<p>I began learning how to code by using free online resources such as FreeCodeCamp.</p>
+        <p>Languages currently using:</p>
+        	<span class="cd-date" id="first-date">July 2022</span>
         <ul class="content-skills">
         <li>HTML5</li>
         <li>CSS3</li>
         <li>JavaScript</li>
-        <li>jQuery</li>
-        <li>Wordpress</li>
+        <li>Bootstrap 5</li>
+        <li>PHP</li>
         </ul>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -80,13 +74,21 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>Title of section 2</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-				<span class="cd-date">Jan 18</span>
+				<h2>Being a sponge and getting better</h2>
+				<p>My dream is to one day be in a developing role that is geared towards the front-end. I would like this goal to be achieved by the beginning of 2024.</p>
+        <p>Other things I want to achieve/learn before 2024 include:</p>
+        <ul class="content-skills">
+          <li>CI/CD</li>
+          <li>React</li>
+          <li>TypeScript</li>
+          <li>Cybersecurity</li>
+          <li>AWS</li>
+          <li>Have a beautiful portfolio</li>
+          </ul>
+				<span class="cd-date" id="second-date">Present</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
-
-
+    
 	</section> <!-- cd-timeline -->
 </section>
 <!-- PORTFOLIO -->
