--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -55,7 +55,7 @@
         <div class="timeline-content-info">
         </div>
 				<p>I began learning how to code by using free online resources such as FreeCodeCamp.</p>
-        <p>Languages currently using:</p>
+        <p>Languages learnt include:</p>
         	<span class="cd-date" id="first-date">July 2022</span>
         <ul class="content-skills">
         <li>HTML5</li>
@@ -63,6 +63,7 @@
         <li>JavaScript</li>
         <li>Bootstrap 5</li>
         <li>PHP</li>
+        <li>Python 3</li>
         </ul>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
